# meme-coin-program

./: .gitignore  Anchor.toml  package-lock.json  package.json
programs/meme-coin-program/: Cargo.toml
programs/meme-coin-program/src/: lib.rs
tests/: meme-coin-program.ts
