[package]
name = "meme-coin-program"
version = "0.1.0"
description = "A Solana program for meme coin trading"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "=1.17.0"
solana-sdk = "=1.17.0"
tokio = { version = "1.0", features = ["macros"] }